orw changes post tab to space chagnes