@@ -135,7 +135,7 @@ public final class Encoder {
       layers = Math.abs(userSpecifiedLayers);
       if (layers > (compact ? MAX_NB_BITS_COMPACT : MAX_NB_BITS)) {
         throw new IllegalArgumentException(
-            String.format("Illegal value %s for layers", userSpecifiedLayers));
+            "Illegal value %s for layers".formatted(userSpecifiedLayers));
       }
       totalBitsInLayer = totalBitsInLayer(layers, compact);
       wordSize = WORD_SIZE[layers];
