@@ -33,7 +33,6 @@ import java.awt.image.BufferedImage;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.EnumMap;
 import java.util.Map;
 
@@ -43,13 +42,13 @@ import java.util.Map;
  */
 public final class QRCodeWriterTestCase extends Assert {
 
-  private static final Path BASE_IMAGE_PATH = Paths.get("src/test/resources/golden/qrcode/");
+  private static final Path BASE_IMAGE_PATH = Path.of("src/test/resources/golden/qrcode/");
 
   private static BufferedImage loadImage(String fileName) throws IOException {
     Path file = BASE_IMAGE_PATH.resolve(fileName);
     if (!Files.exists(file)) {
       // try starting with 'core' since the test base is often given as the project root
-      file = Paths.get("core/").resolve(BASE_IMAGE_PATH).resolve(fileName);
+      file = Path.of("core/").resolve(BASE_IMAGE_PATH).resolve(fileName);
     }
     assertTrue("Please download and install test images, and run from the 'core' directory", Files.exists(file));
     return ImageIO.read(file.toFile());
